--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "node": ">= 18"
   },
   "dependencies": {
+    "@azure/msal-node": "^2.16.1",
     "@iobroker/adapter-core": "^3.2.2",
-    "mailparser": "^3.7.1",
-    "node-imap": "^0.9.6"
+    "imap-iobroker": "^0.1.1",
+    "mailparser": "^3.7.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
