--- a/package.json
+++ b/package.json
@@ -1,83 +1,83 @@
 {
-  "name": "iobroker.imap",
-  "version": "0.3.0",
-  "description": "imap to receive your emails",
-  "author": {
-    "name": "Lucky-ESA",
-    "email": "github@luckyskills.de"
-  },
-  "homepage": "https://github.com/Lucky-ESA/ioBroker.imap",
-  "license": "MIT",
-  "keywords": [
-    "imap",
-    "mail",
-    "email",
-    "receive",
-    "ioBroker"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Lucky-ESA/ioBroker.imap.git"
-  },
-  "engines": {
-    "node": ">= 18"
-  },
-  "dependencies": {
-    "@azure/msal-node": "^2.16.2",
-    "@iobroker/adapter-core": "^3.2.2",
-    "imap-iobroker": "^0.1.1",
-    "mailparser": "^3.7.1"
-  },
-  "devDependencies": {
-    "@alcalzone/release-script": "^3.8.0",
-    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
-    "@alcalzone/release-script-plugin-license": "^3.7.0",
-    "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
-    "@iobroker/adapter-dev": "^1.3.0",
-    "@iobroker/eslint-config": "^1.0.0",
-    "@iobroker/testing": "^5.0.0",
-    "@tsconfig/node18": "^18.2.4",
-    "@types/chai": "^4.3.20",
-    "@types/chai-as-promised": "^8.0.1",
-    "@types/imap": "^0.8.42",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.9.0",
-    "@types/proxyquire": "^1.3.31",
-    "@types/sinon": "^17.0.3",
-    "@types/sinon-chai": "^3.2.12",
-    "chai": "^4.5.0",
-    "chai-as-promised": "^8.0.0",
-    "mocha": "^10.8.2",
-    "proxyquire": "^2.1.3",
-    "sinon": "^19.0.2",
-    "sinon-chai": "^3.7.0",
-    "typescript": "~5.6.2"
-  },
-  "main": "main.js",
-  "files": [
-    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).json",
-    "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
-    "lib/",
-    "www/",
-    "io-package.json",
-    "LICENSE",
-    "main.js"
-  ],
-  "scripts": {
-    "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
-    "test:package": "mocha test/package --exit",
-    "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:js && npm run test:package",
-    "check": "tsc --noEmit -p tsconfig.check.json",
-    "lint": "eslint .",
-    "translate": "translate-adapter",
-    "release": "release-script",
-    "release-patch": "release-script patch --yes",
-    "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes"
-  },
-  "bugs": {
-    "url": "https://github.com/Lucky-ESA/ioBroker.imap/issues"
-  },
-  "readmeFilename": "README.md"
+    "name": "iobroker.imap",
+    "version": "0.3.0",
+    "description": "imap to receive your emails",
+    "author": {
+        "name": "Lucky-ESA",
+        "email": "github@luckyskills.de"
+    },
+    "homepage": "https://github.com/Lucky-ESA/ioBroker.imap",
+    "license": "MIT",
+    "keywords": [
+        "imap",
+        "mail",
+        "email",
+        "receive",
+        "ioBroker"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:Lucky-ESA/ioBroker.imap.git"
+    },
+    "engines": {
+        "node": ">= 18"
+    },
+    "dependencies": {
+        "@azure/msal-node": "^2.16.2",
+        "@iobroker/adapter-core": "^3.2.2",
+        "imap-iobroker": "^0.1.1",
+        "mailparser": "^3.7.1"
+    },
+    "devDependencies": {
+        "@alcalzone/release-script": "^3.8.0",
+        "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
+        "@alcalzone/release-script-plugin-license": "^3.7.0",
+        "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+        "@iobroker/adapter-dev": "^1.3.0",
+        "@iobroker/eslint-config": "^1.0.0",
+        "@iobroker/testing": "^5.0.0",
+        "@tsconfig/node18": "^18.2.4",
+        "@types/chai": "^4.3.20",
+        "@types/chai-as-promised": "^8.0.1",
+        "@types/imap": "^0.8.42",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.9.0",
+        "@types/proxyquire": "^1.3.31",
+        "@types/sinon": "^17.0.3",
+        "@types/sinon-chai": "^3.2.12",
+        "chai": "^4.5.0",
+        "chai-as-promised": "^8.0.0",
+        "mocha": "^10.8.2",
+        "proxyquire": "^2.1.3",
+        "sinon": "^19.0.2",
+        "sinon-chai": "^3.7.0",
+        "typescript": "~5.6.2"
+    },
+    "main": "main.js",
+    "files": [
+        "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).json",
+        "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
+        "lib/",
+        "www/",
+        "io-package.json",
+        "LICENSE",
+        "main.js"
+    ],
+    "scripts": {
+        "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
+        "test:package": "mocha test/package --exit",
+        "test:integration": "mocha test/integration --exit",
+        "test": "npm run test:js && npm run test:package",
+        "check": "tsc --noEmit -p tsconfig.check.json",
+        "lint": "eslint -c eslint.config.mjs .",
+        "translate": "translate-adapter",
+        "release": "release-script",
+        "release-patch": "release-script patch --yes",
+        "release-minor": "release-script minor --yes",
+        "release-major": "release-script major --yes"
+    },
+    "bugs": {
+        "url": "https://github.com/Lucky-ESA/ioBroker.imap/issues"
+    },
+    "readmeFilename": "README.md"
 }
